--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Reminders</string>
+    <string name="buttonAddReminderWithLocation">Готово</string>
+    <string name="hintReminderTitle">Название</string>
 </resources>
